# litedns

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
examples/: config.yaml  litedns.openwrt.service  litedns.service
src/: args.rs  configuration.rs  geosite.rs  handler.rs  lib.rs  main.rs  proxy_runtime.rs  router.rs
src/matcher/: domain.rs  domain_keyword.rs  domain_suffix.rs  geosite.rs  mod.rs
src/proto/: geosite.proto
tests/config/: config.yaml
