[package]
name = "litedns"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
anyhow = "1.0.71"
async-trait = "0.1.68"
config = "0.13"
prost = "0.11.9"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["macros", "net"] }
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-rustls", "dns-over-https-rustls"] }
trust-dns-server = "0.22.0"
url = { version = "2.3.1", features = ["serde"] }
regex = "1"
rust-embed="6"
clap = { version = "4.3.9", features = ["derive"] }
serde_urlencoded = "0.7.1"

[build-dependencies]
prost-build = "0.11"
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"] }

[profile.release]
lto = true
strip = true
